fixed projects preview overflow

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ button {
 .projects-video-loop {
     object-fit: cover;
     display: block;
-    height: fit-content;
+    height: 100%;
     width: 100%;
     grid-column: 1 / span 4;
     grid-row: 1 / span 4;
